added Find and replace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,12 @@ if(ANDROID)
     toolBarEdit.cpp
     mainwindow.h
     mainwindow.ui
+    finddialog.ui
+    finddialog.h
+    finddialog.cpp
+    replacedialog.cpp
+    replacedialog.h
+    replacedialog.ui
     resources.qrc
   )
 else()
@@ -45,6 +51,12 @@ else()
     toolBarEdit.cpp
     mainwindow.h
     mainwindow.ui
+    finddialog.ui
+    finddialog.h
+    finddialog.cpp
+    replacedialog.cpp
+    replacedialog.h
+    replacedialog.ui
     resources.qrc
   )
 endif()
